# transcript-reader

./: .gitignore  README.md  channels.yaml  pyproject.toml  state.json
.github/workflows/: pages.yml  test.yml
app/: index.html  manifest.webmanifest  sw.js
app/css/: style.css
app/js/: app.js  db.js  router.js  sync.js
app/js/views/: home.js  reader.js
scripts/: config.py  extractor.py  manifest_gen.py  scrape.py  state.py
tests/: test_config.py  test_extractor.py  test_manifest_gen.py  test_scrape.py  test_state.py
