[project]
name = "transcript-reader"
version = "0.1.0"
description = "YouTube transcript scraper"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
fail_under = 100
show_missing = true
